# gettis-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
installers/: install.sh
src/: Compiled.cpp  Compiled.h  CompiledLanguage.cpp  CompiledLanguage.h  Interpreted.cpp  Interpreted.h  InterpretedLanguage.cpp  InterpretedLanguage.h  Language.cpp  Language.h  ProjectSettings.cpp  ProjectSettings.h  fetcher.cpp  fetcher.h  main.cpp
src/langs/: Cpp.cpp  Cpp.h  Java.cpp  Java.h
